--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references=true
+# spring.jackson.date-format = "dd-MM-yyyy"
+# Se necesita buscar una forma de arreglar las fechas
