--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.datasource.url = jdbc:mysql://localhost:3306/bd_probar
 spring.datasource.username = root
-spring.datasource.password = Spcl#475
+spring.datasource.password = Spcl1986
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
