--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8081
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/bd_probar
 spring.datasource.username = root
 spring.datasource.password = Spcl#475
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references=true
